--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,11 +2,19 @@
   height: 100%;
   background-image: url(/static/img/future.jpeg);
   min-height: 500px;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .icon-folder-card {
+  width: 18rem;
   background: transparent;
   color: white;
-  top: 50%;
-  left: 2%;
+  top: 200px;
+  left: 20%;
+  border: none;
+}
+
+.icons{
+  margin: auto;
 }
