--- a/Templates/index.html
+++ b/Templates/index.html
@@ -84,7 +84,7 @@
           <div class="card-body">
             <h5 class="card-title">Download</h5>
             <p class="card-text">Some quickexample textdd to be card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Download</a>
+            <a href="#" class="btn btn-primary">search</a>
           </div>
         </div>
       </div>
