--- a/Templates/index.html
+++ b/Templates/index.html
@@ -83,7 +83,7 @@
           </svg>
           <div class="card-body">
             <h5 class="card-title">Download</h5>
-            <p class="card-text">Some quickexample textdd to be card title and make up the bulk of the card's content.</p>
+            <p class="card-text">You can search for files Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur fuga quaerat, atque deserunt ut explicabo, ex aliquam praesentium, quo culpa velit corrupti commodi iusto deleniti harum dolore sunt voluptatem similique.</p>
             <a href="#" class="btn btn-primary">search</a>
           </div>
         </div>
