Added some text in the cards

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -70,7 +70,7 @@
           </svg>
           <div class="card-body">
             <h5 class="card-title">Upload</h5>
-            <p class="card-text">Some quickexample textdd to be card title and make up the bulk of the card's content.</p>
+            <p class="card-text">upload via your own loacal computer momo</p>
             <a href="#" class="btn btn-primary">Upload</a>
           </div>
         </div>
@@ -83,7 +83,8 @@
           </svg>
           <div class="card-body">
             <h5 class="card-title">Download</h5>
-            <p class="card-text">You can search for files Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur fuga quaerat, atque deserunt ut explicabo, ex aliquam praesentium, quo culpa velit corrupti commodi iusto deleniti harum dolore sunt voluptatem similique.</p>
+            <p class="card-text">
+              Download old midterm that other people uploaded via their local computer</p>
             <a href="#" class="btn btn-primary">search</a>
           </div>
         </div>
