We mastered git

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -70,7 +70,7 @@
           </svg>
           <div class="card-body">
             <h5 class="card-title">Upload</h5>
-            <p class="card-text">upload via your own loacal computer momo</p>
+            <p class="card-text">yes we can</p>
             <a href="#" class="btn btn-primary">Upload</a>
           </div>
         </div>
@@ -84,7 +84,7 @@
           <div class="card-body">
             <h5 class="card-title">Download</h5>
             <p class="card-text">
-              Download old midterm that other people uploaded via their local computer</p>
+              masters of git</p>
             <a href="#" class="btn btn-primary">search</a>
           </div>
         </div>
